# reinforcement-learning

./: .gitignore  1.colors.vs  3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  README.md  command_to_run.txt  main.cpp  main.ipynb  shader_s.h
implement_game/: main.ipynb
reinforcement-learning/: main.ipynb
sample_game/: CMakeLists.txt  debug_log.txt  main.cpp  main.py  python_bindings.cpp
sample_game/engine/: camera.h  functions.h  game_api_state.cpp  game_api_state.h  mesh.h  model.h  scene_object.h  shader.h
sample_game/shaders/: sample.vs
